implmented custom exception class for third party api response
