# src/Microservices/Controllers/DefaultApi.cs
@@ -8,14 +8,22 @@
  * Generated by: https://openapi-generator.tech
  */
 
+using System;
+using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
+using System.Threading;
 using System.Threading.Tasks;
+using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
+using Microsoft.AspNetCore.Http;
 using Swashbuckle.AspNetCore.Annotations;
+using Swashbuckle.AspNetCore.SwaggerGen;
+using Newtonsoft.Json;
 using Microservices.Attributes;
 using Microservices.Models;
 
 namespace Microservices.Controllers
-{
+{ 
     /// <summary>
     /// 
     /// </summary>
@@ -30,6 +38,7 @@ namespace Microservices.Controllers
         /// <response code="200">Email verification result</response>
         /// <response code="400">Bad Request. The request was invalid or missing required parameters.</response>
         /// <response code="500">Internal Server Error. An unexpected error occurred on the server.</response>
+        /// <response code="503">Network error.</response>
         [HttpPost]
         [Route("/emailVerify")]
         [Consumes("application/json")]
@@ -38,6 +47,7 @@ namespace Microservices.Controllers
         [SwaggerResponse(statusCode: 200, type: typeof(EmailVerificationAPIResponse), description: "Email verification result")]
         [SwaggerResponse(statusCode: 400, type: typeof(APIResponse), description: "Bad Request. The request was invalid or missing required parameters.")]
         [SwaggerResponse(statusCode: 500, type: typeof(APIResponse), description: "Internal Server Error. An unexpected error occurred on the server.")]
+        [SwaggerResponse(statusCode: 503, type: typeof(APIResponse), description: "Network error.")]
         public abstract Task<IActionResult> EmailVerifyPost([FromBody]EmailVerificationRequest emailVerificationRequest);
     }
 }
